fix(aio): style TOC scrollbar similar to other scrollbars

--- a/aio/src/styles/2-modules/_scrollbar.scss
+++ b/aio/src/styles/2-modules/_scrollbar.scss
@@ -12,16 +12,16 @@ body::-webkit-scrollbar-thumb, md-sidenav.sidenav::-webkit-scrollbar-thumb, .mat
   outline: 1px solid $darkgray;
 }
 
-.search-results::-webkit-scrollbar {
+.search-results::-webkit-scrollbar, .toc-container::-webkit-scrollbar {
   height: 4px;
   width: 4px;
 }
 
-.search-results::-webkit-scrollbar-track {
+.search-results::-webkit-scrollbar-track, .toc-container::-webkit-scrollbar-trac {
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 }
 
-.search-results::-webkit-scrollbar-thumb {
+.search-results::-webkit-scrollbar-thumb, .toc-container::-webkit-scrollbar-thumb {
   background-color: $mediumgray;
   outline: 1px solid slategrey;
 }
